Added basic Journal feature

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,14 +32,14 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="/">River Dashboard</a>
             </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+
+                    <li><a class="disabled">Login</a></li>
+                    <li><a class="disabled">Create Account</a></li>
+
+                </ul>
+            </div>
         </div>    
         
     </nav>
-    
-    <!--<div id="navbar-example" style="position: sticky; top:5%;">-->
-    <!--    <ul class="nav nav-tabs" role="tablist">-->
-    <!--        <li class="list-group-item active"><a href="#top">Top of Page</a></li>-->
-    <!--        <li class="list-group-item"><a href="#bottom">Bottom of Page</a></li>-->
-    <!--    </ul>-->
-    <!--</div>-->
-        
